personal photo added

--- a/assets/css/choices.css
+++ b/assets/css/choices.css
@@ -53,7 +53,9 @@ body{
 
 .avatar {
     background: url("../img/avatar.png");
-    
-    margin: auto;
+    padding: auto;
+    margin: 2% auto;
+    width: 92px;
+    height: 92px;
    
 }
