--- a/assets/css/choices.css
+++ b/assets/css/choices.css
@@ -10,10 +10,12 @@ background: linear-gradient(to bottom,  #b9b9c2 0%,#b9b9c2 50%,#f2f2f2 51%,#f2f2
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b9b9c2', endColorstr='#f2f2f2',GradientType=0 ); /* IE6-9 */
 
     border: 0px;
+   
 }
 
 .navbar{
     min-height: 150px;
+    max-height: 150px;
 }
     
 .footer {
@@ -37,6 +39,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b9b9c2', end
 
 .choicescontainer{
     background-color: #f5f5f5;
+    
 }
 
 .fa-check{
@@ -57,5 +60,18 @@ body{
     margin: 2% auto;
     width: 92px;
     height: 92px;
+    text-align: center;
    
+}
+
+@media (max-width: 768px) {
+.avatar{
+    margin: 10% auto;
+}
+
+}
+
+.iam{
+    background-color: black;
+    height: 20px;
 }
