Started implementing dropdown menu

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,11 +15,11 @@ body {
     height: 150px;
     width: 150px;
     margin: auto;
-    margin-top: 30%;
+    margin-top: 20%;
 }
 
 .facebooklogin{
-    margin-top: 40%;
+    margin-top: 100px;
     max-width: 730px;
 }
 
