--- a/assets/css/choices.css
+++ b/assets/css/choices.css
@@ -1,23 +1,18 @@
 /* Choices CSS */
 .choicesheader{
 background: #b9b9c2; /* Old browsers */
-background: -moz-linear-gradient(top,  #b9b9c2 0%, #b9b9c2 50%, #f2f2f2 51%, #f2f2f2 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#b9b9c2), color-stop(50%,#b9b9c2), color-stop(51%,#f2f2f2), color-stop(100%,#f2f2f2)); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top,  #b9b9c2 0%,#b9b9c2 50%,#f2f2f2 51%,#f2f2f2 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top,  #b9b9c2 0%,#b9b9c2 50%,#f2f2f2 51%,#f2f2f2 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top,  #b9b9c2 0%,#b9b9c2 50%,#f2f2f2 51%,#f2f2f2 100%); /* IE10+ */
-background: linear-gradient(to bottom,  #b9b9c2 0%,#b9b9c2 50%,#f2f2f2 51%,#f2f2f2 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b9b9c2', endColorstr='#f2f2f2',GradientType=0 ); /* IE6-9 */
+background: -moz-linear-gradient(top,  #b9b9c2 0%, #b9b9c2 50%, #D2D2D2 51%, #D2D2D2 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#b9b9c2), color-stop(50%,#b9b9c2), color-stop(51%,#D2D2D2), color-stop(100%,#D2D2D2)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  #b9b9c2 0%,#b9b9c2 50%,#D2D2D2 51%,#D2D2D2 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  #b9b9c2 0%,#b9b9c2 50%,#D2D2D2 51%,#D2D2D2 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  #b9b9c2 0%,#b9b9c2 50%,#D2D2D2 51%,#D2D2D2 100%); /* IE10+ */
+background: linear-gradient(to bottom,  #b9b9c2 0%,#b9b9c2 50%,#D2D2D2 51%,#D2D2D2 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b9b9c2', endColorstr='#D2D2D2',GradientType=0 ); /* IE6-9 */
 
     border: 0px;
    
 }
 
-.navbar{
-    min-height: 150px;
-    max-height: 150px;
-}
-    
 .footer {
   position: absolute;
   bottom: 0;
@@ -37,11 +32,6 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b9b9c2', end
     
 }
 
-.choicescontainer{
-    background-color: #f5f5f5;
-    
-}
-
 .fa-check{
     padding-top: 5px;
 }
@@ -54,38 +44,81 @@ body{
     color: #ffffff;
 }
 
+.avatar{
+    margin: 8px auto;
+}
+    
+.navbar{
+    min-height: 120px;
+    max-height: 120px;
+}
+    
+.iam {
+    background-color: #93939E;
+    height: 45px;
+
+}
+
+.choicescontainer{
+    padding-top: 100px;
+
+}
+
+@media (min-width: 768px) {
 .avatar {
     background: url("../img/avatar.png");
     padding: auto;
-    margin: 2% auto;
+    margin: 20px auto;
     width: 92px;
     height: 92px;
     text-align: center;
    
 }
 
-@media (max-width: 768px) {
-.avatar{
-    margin: 10% auto;
+.navbar{
+    min-height: 150px;
+    max-height: 150px;
 }
 
-}
-
-.iam{
-    
+.iam {
     background-color: #93939E;
     height: 45px;
-    margin-top: 18%;
-    
+
+}
+
+.choicescontainer{
+    background-color: #f5f5f5;
+    padding-top: 130px;
+    padding-right: 0px;
+    padding-left: 0px;
+} 
     
 }
+
+
+
 
 .iam p{
-    
     color: white;
-    height: 50px;
-    width: 80px;
-    margin: auto;
-    padding-top: 2%;
+    font-weight: bold;
+    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
+.choicescontainer .row{
+    padding-top: 25px;
+    padding-bottom: 25px;
+    margin-right: 0px;
+    margin-left: 0px;
+    
+}
+
+.choicebuttom{
+    padding: 5px 10px;
+    font-size: 18px;
+    color: #777783;
+    width: 100px;
+    border-radius: 40px;
+    background-color: #d2d2d2;
+}
